# uppcl-pro

./: .env.sample  .gitignore  CLAUDE.MD  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  appsavy.py  pyproject.toml  requirements-dev.txt  requirements.txt  uppcl_api.py
.claude/skills/first-login/: SKILL.md
.claude/skills/push-to-github/: SKILL.md
.claude/skills/regenerate-screenshots/: SKILL.md
.claude/skills/setup/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  reverse_engineering.yml
.github/workflows/: ci.yml
deploy/: docker-compose.yml  pi-setup.sh
deploy/caddy/: Caddyfile  Caddyfile.docker
deploy/systemd/: uppcl-proxy.service
docs/: PI_DEPLOY.md  api.html  index.html  openapi.json  swagger.html
scripts/: capture_screenshots.py  check_pii.py  pii.sample.json  redactions.js
web/: next.config.ts  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analytics/: page.tsx
web/src/app/complaints/: page.tsx
web/src/app/grid-nodes/: page.tsx
web/src/app/ledger/: page.tsx
web/src/app/recharges/: page.tsx
web/src/app/settings/: page.tsx
web/src/components/: AnomalyBanner.tsx  CommandPalette.tsx  ComplaintsSection.tsx  LoginGate.tsx  OutagePanel.tsx  OutageReporter.tsx  Shell.tsx  Sidebar.tsx  Tile.tsx  Topbar.tsx
web/src/components/ui/: SidePanel.tsx  Toast.tsx  Tooltip.tsx
web/src/components/viz/: BaselineActive.tsx  CalendarHeatmap.tsx  Donut.tsx  (+6 more)
web/src/lib/: api.ts  chartColors.ts  outage.ts  stats.ts  useKeyboardShortcuts.ts  utils.ts
