[project]
name = "uppcl-pro-proxy"
version = "0.1.0"
description = "Local FastAPI proxy for UPPCL SMART prepaid meters"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line-length handled by formatter
    "E701",  # `try: … / except X: _err(e)` one-liners are the house style in uppcl_api.py
    "B008",  # FastAPI uses Depends(...) as default
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]   # scripts do imports after argparse setup
